--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -22,3 +22,5 @@ rumqttc = { version = "0.24", features = ["use-rustls"] }
 rustls = "0.22"
 rustls-pemfile = "2"
 anyhow = "1"
+chrono = "0.4.42"
+reqwest = { version = "0.12.24", features = ["json"] }
